wakeup threshold and waitms is now configurable. This is 0.3.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-20	Michael Lauer	<mlauer@vanille-media.de>
+
+	* Support for wakeup threshold and waitms is now configurable as well.
+	
+	* Released as 0.3.1
+
 2009-02-15	Michael Lauer	<mlauer@vanille-media.de>
 
 	* Added support for a configuration file. The config file comes in handy
