--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-17	Michael Lauer	<mlauer@vanille-media.de>
+
+	* Release as 0.3.3
+
 2009-02-22	Michael Lauer	<mlauer@vanille-media.de>
 
 	* fso-abyss has been split into two subprojects:
